--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -208,11 +208,10 @@
                                 android:layout_width="fill_parent"
                                 android:layout_height="wrap_content"
                                 android:ems="10"
-                                android:focusable="false"
                                 android:freezesText="true"
                                 android:hint="@string/hint_age"
                                 android:imeOptions="actionUnspecified"
-                                android:inputType=""
+                                android:inputType="number"
                                 android:maxLines="1"
                                 android:singleLine="true"
                                 android:textAppearance="@style/sign_up_input" />
