IS-75:Add Block select based on Distr + Add Bokaro &Dhanbad dists for Jh

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -289,7 +289,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
                             android:focusable="true"
-                            android:entries="@array/jh_block_values"
+                            android:entries="@array/default_block_values"
                             />
 
                         <com.google.android.material.textfield.TextInputLayout
