Added sign up/login with OTP only on LoginActivity & SignupActivity

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -564,7 +564,8 @@
                         android:layout_marginBottom="15dp"
                         android:orientation="vertical"
                         android:animateLayoutChanges="true"
-                        android:visibility="gone">
+                        android:visibility="gone"
+                        tools:visibility="visible">
 
                         <!--OTP No-->
                         <com.google.android.material.textfield.TextInputLayout
@@ -596,6 +597,7 @@
                             android:layout_height="wrap_content"/>
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:passwordToggleEnabled="true">
@@ -616,6 +618,7 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <com.google.android.material.textfield.TextInputLayout
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             app:passwordToggleEnabled="true">
@@ -636,6 +639,7 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                         <TextView
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_margin="2dp"
