--- a/app/src/main/res/layout/activity_appointments.xml
+++ b/app/src/main/res/layout/activity_appointments.xml
@@ -5,52 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.appointments.AppointmentsActivity">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/your_data_overview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15sp"
-        android:fontFamily="@font/lato_bold"
-        android:padding="10sp"
-        android:paddingStart="15sp"
-        android:visibility="gone"
-        android:text="@string/your_health_record"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/tv_no_visit"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/your_data_overview"
-        android:layout_marginTop="10sp"
-        android:gravity="center"
-        android:padding="10sp"
-        android:text="@string/no_visits"
-        android:textAppearance="@style/home_no_visit"
-        android:textColor="@null" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_data"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/your_data_overview" />
-</RelativeLayout>
-
-
-    <RelativeLayout
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
+        app:tabTextColor="@color/white"
+        app:tabIndicatorHeight="6dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#1db995">
+        android:background="@color/colorPrimary">
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
@@ -59,5 +20,4 @@
         android:layout_height="match_parent"
         android:layout_below="@id/tabLayout"
         tools:layout_editor_absoluteX="8dp" />
-    </RelativeLayout>
 </RelativeLayout>
