--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -239,53 +239,69 @@
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
-                <LinearLayout
-                    android:id="@+id/sub_header_view"
+                <!--                <LinearLayout-->
+                <!--                    android:id="@+id/sub_header_view"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:layout_below="@id/cardview_self_assessment"-->
+                <!--                    android:layout_marginStart="10dp"-->
+                <!--                    android:layout_marginTop="15dp"-->
+                <!--                    android:layout_marginEnd="10dp"-->
+                <!--                    android:orientation="horizontal">-->
+
+
+                <!--                    <TextView-->
+                <!--                        android:layout_width="0dp"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_gravity="center_horizontal|center_vertical"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        android:fontFamily="@font/lato_bold"-->
+                <!--                        android:gravity="center"-->
+                <!--                        android:includeFontPadding="false"-->
+                <!--                        android:text="@string/recovering_covid"-->
+                <!--                        android:textColor="@color/txt_sub_header_color"-->
+                <!--                        android:textSize="13sp" />-->
+
+
+                <!--                    <TextView-->
+                <!--                        android:visibility="gone"-->
+                <!--                        android:layout_width="0dp"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:layout_gravity="center_horizontal|center_vertical"-->
+                <!--                        android:layout_weight="1"-->
+                <!--                        android:fontFamily="@font/lato_bold"-->
+                <!--                        android:gravity="center"-->
+                <!--                        android:includeFontPadding="false"-->
+                <!--                        android:text="@string/simple_exercises"-->
+                <!--                        android:textColor="@color/txt_sub_header_color"-->
+                <!--                        android:textSize="13sp" />-->
+
+
+                <!--                </LinearLayout>-->
+
+                <TextView
+                    android:id="@+id/video_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cardview_self_assessment"
+                    android:fontFamily="@font/lato_bold"
+                    android:includeFontPadding="false"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:visibility="gone"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="10dp"
-                    android:orientation="horizontal">
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/lato_bold"
-                        android:gravity="center"
-                        android:includeFontPadding="false"
-                        android:text="@string/recovering_covid"
-                        android:textColor="@color/txt_sub_header_color"
-                        android:textSize="13sp" />
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/lato_bold"
-                        android:gravity="center"
-                        android:includeFontPadding="false"
-                        android:text="@string/simple_exercises"
-                        android:textColor="@color/txt_sub_header_color"
-                        android:textSize="13sp" />
-
-
-                </LinearLayout>
+                    android:layout_below="@+id/cardview_self_assessment"
+                    android:text="@string/educational_videos"
+                    android:textColor="@color/txt_sub_header_color" />
 
 
                 <LinearLayout
                     android:id="@+id/cardview_two_action_View"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/sub_header_view"
+                    android:layout_below="@id/video_title"
                     android:orientation="horizontal"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_marginRight="5dp"
                     >
 
@@ -300,26 +316,74 @@
                         app:cardElevation="8dp"
                         app:cardPreventCornerOverlap="false">
 
-                        <RelativeLayout
+                        <!--                        <RelativeLayout-->
+                        <!--                            android:id="@+id/button_home_quarantine"-->
+                        <!--                            android:layout_width="match_parent"-->
+                        <!--                            android:layout_height="match_parent"-->
+                        <!--                            android:gravity="bottom">-->
+
+                        <!--                            <ImageView-->
+                        <!--                                android:layout_width="wrap_content"-->
+                        <!--                                android:layout_height="wrap_content"-->
+                        <!--                                android:layout_centerHorizontal="true"-->
+                        <!--                                android:src="@drawable/ic_doctor_with_mask">-->
+
+                        <!--                            </ImageView>-->
+                        <!--                            -->
+                        <!--                        </RelativeLayout>-->
+
+                        <LinearLayout
                             android:id="@+id/button_home_quarantine"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="bottom"
-
-                            >
+                            android:orientation="horizontal"
+                            android:gravity="bottom">
 
                             <ImageView
-                                android:layout_width="wrap_content"
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
                                 android:layout_height="wrap_content"
                                 android:layout_centerHorizontal="true"
                                 android:src="@drawable/ic_doctor_with_mask">
 
                             </ImageView>
 
-                        </RelativeLayout>
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_weight="1"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:textStyle="bold"
+                                    android:textSize="20sp"
+                                    android:fontFamily="@font/lato_regular"
+                                    android:layout_margin="5dp"
+                                    android:layout_gravity="center"
+                                    android:layout_height="wrap_content"
+                                    android:textAlignment="center"
+                                    android:text="@string/videos_title"
+                                    android:src="@drawable/ic_doctor_with_mask">
+
+                                </TextView>
+
+                                <ImageView
+                                    android:layout_width="20dp"
+                                    android:layout_gravity="center"
+                                    android:layout_height="20dp"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginStart="10dp"
+                                    android:src="@drawable/svg_arrow_forward_black" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
+                        android:visibility="gone"
                         android:id="@+id/cardview_button_educational_videos"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -600,8 +664,8 @@
                                 android:layout_below="@+id/Help_Text"
                                 android:layout_marginStart="10sp"
                                 android:background="@android:color/transparent"
-                                android:drawableStart="@drawable/ic_icons8_whatsapp"
-                                android:drawableLeft="@drawable/ic_icons8_whatsapp"
+                                android:drawableStart="@drawable/telephone"
+                                android:drawableLeft="@drawable/telephone"
                                 android:drawablePadding="10sp"
                                 android:fontFamily="@font/lato_medium"
                                 android:gravity="start|center"
@@ -658,15 +722,15 @@
                             android:layout_marginStart="5dp"
                             android:layout_marginEnd="40dp">
 
-                         <!--   <TextView
-                                android:id="@+id/mental_help_title"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/lato_bold"
-                                android:includeFontPadding="false"
-                                android:text="@string/help"
-                                android:textColor="@color/txt_sub_header_color"
-                                android:textSize="12sp" />-->
+                            <!--   <TextView
+                                   android:id="@+id/mental_help_title"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:fontFamily="@font/lato_bold"
+                                   android:includeFontPadding="false"
+                                   android:text="@string/help"
+                                   android:textColor="@color/txt_sub_header_color"
+                                   android:textSize="12sp" />-->
 
 
                             <TextView
@@ -854,6 +918,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_baseline_event_24"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -1171,5 +1241,6 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
