--- a/app/src/main/res/layout/activity_splash_activity.xml
+++ b/app/src/main/res/layout/activity_splash_activity.xml
@@ -19,7 +19,7 @@
             android:layout_width="80dip"
             android:layout_height="80dip"
             android:layout_gravity="center"
-            android:src="@drawable/ic_spash_logo_background" />
+            android:src="@drawable/ic_logo_app" />
 
         <TextView
             android:layout_width="wrap_content"
