--- a/app/src/main/res/layout/activity_physical_exam.xml
+++ b/app/src/main/res/layout/activity_physical_exam.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="#fcfcff"
-    tools:context="io.intelehealth.client.activities.physical_exam_activity.PhysicalExamActivity">
+    tools:context=".activities.physcialExamActivity.PhysicalExamActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
