self assessment back issue & fab submit validation issue fixed

--- a/app/src/main/res/layout/activity_physical_exam.xml
+++ b/app/src/main/res/layout/activity_physical_exam.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/btn_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_gravity="center_vertical">
 
                 <ImageView
