--- a/app/src/main/res/layout-sw600dp/activity_physical_exam.xml
+++ b/app/src/main/res/layout-sw600dp/activity_physical_exam.xml
@@ -5,26 +5,25 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="#fcfcff"
-    tools:context="io.intelehealth.client.activities.physical_exam_activity.PhysicalExamActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".activities.physcialExamActivity.PhysicalExamActivity">
 
     <LinearLayout
+        style="@style/AppTheme.AppBarOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        style="@style/AppTheme.AppBarOverlay">
+        android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
+            android:visibility="gone"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:visibility="gone"
-            >
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -32,22 +31,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
 
             <RelativeLayout
                 android:id="@+id/btn_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:visibility="gone"
-                android:layout_gravity="center_vertical">
+                android:layout_gravity="center_vertical"
+                android:visibility="visible">
 
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/svg_header_left_arrow"
-                    android:layout_centerInParent="true"/>
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/svg_header_left_arrow" />
 
 
             </RelativeLayout>
@@ -55,51 +53,49 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/txt_sub_header_color"
-                android:textSize="38sp"
-                android:fontFamily="@font/lato_bold"
                 android:layout_gravity="center_vertical"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/lato_bold"
                 android:includeFontPadding="false"
                 android:text="@string/txt_self_assessment"
-                android:layout_marginStart="20dp"
-                android:layout_marginVertical="20dp"
-                />
+                android:textColor="@color/txt_sub_header_color"
+                android:textSize="38sp" />
 
         </LinearLayout>
 
 
-     <!--   <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            app:tabTextColor="@android:color/white"
-            android:layout_margin="10dp"
-            app:tabSelectedTextColor="@android:color/white"
-            android:background="@color/colorPrimary"/>-->
+        <!--   <android.support.design.widget.TabLayout
+               android:id="@+id/tabs"
+               android:layout_width="match_parent"
+               android:layout_height="20dp"
+               app:tabTextColor="@android:color/white"
+               android:layout_margin="10dp"
+               app:tabSelectedTextColor="@android:color/white"
+               android:background="@color/colorPrimary"/>-->
 
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:background="@drawable/tab_layout_background"
             android:layout_margin="15dp"
-            app:tabMode="scrollable"
+            android:background="@drawable/tab_layout_background"
             app:tabBackground="@drawable/tab_selector"
-            app:tabSelectedTextColor="#2418eb"
-            app:tabPaddingStart="16dp"
-            app:tabPaddingEnd="16dp"
             app:tabIndicator="@null"
             app:tabIndicatorColor="@android:color/transparent"
             app:tabIndicatorHeight="0dp"
+            app:tabMode="scrollable"
+            app:tabPaddingEnd="16dp"
+            app:tabPaddingStart="16dp"
             app:tabRippleColor="@null"
-            />
+            app:tabSelectedTextColor="#2418eb" />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/container"
-            android:layout_alignBottom="@id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_alignBottom="@id/app_bar"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </LinearLayout>
@@ -111,10 +107,10 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="26dp"
         android:backgroundTint="@color/colorPrimaryDark"
-        app:srcCompat="@drawable/svg_right_arrow"
-        tools:ignore="VectorDrawableCompat"
         android:scaleType="center"
         app:fabCustomSize="70dp"
-        app:maxImageSize="30dp"/>
+        app:maxImageSize="30dp"
+        app:srcCompat="@drawable/svg_right_arrow"
+        tools:ignore="VectorDrawableCompat" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
