--- a/app/src/main/res/layout/content_visit_summary.xml
+++ b/app/src/main/res/layout/content_visit_summary.xml
@@ -585,6 +585,95 @@ Github: prajwalmw
         </RelativeLayout>
         </androidx.cardview.widget.CardView>
 
+        <!--Downlaod Prescripton CardView-->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/download_cardview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="40dp"
+            app:cardUseCompatPadding="true"
+            app:cardPreventCornerOverlap="false"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            app:cardCornerRadius="10sp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            >
+
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp">
+
+                <RelativeLayout
+                    android:id="@+id/download_relative"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="0dp"
+                    android:layout_marginEnd="20dp">
+
+                  <!--  <TextView
+                        android:id="@+id/download_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/help"
+                        android:visibility="gone"
+                        android:background="@color/white"
+                        android:textColor="@color/txt_sub_header_color"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/lato_bold"/>
+
+
+                    <TextView
+                        android:id="@+id/presc_downlaod_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/lato_regular"
+                        android:text="@string/whatsApp_description"
+                        android:layout_below="@id/download_title"
+                        android:textSize="14sp"
+                        android:visibility="gone"
+                        android:textColor="@color/txt_sub_header_color"
+                        android:layout_marginTop="10dp"
+                        />-->
+
+                    <Button
+                        android:id="@+id/download_Watsapp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10sp"
+                        android:background="@android:color/transparent"
+                        android:drawableStart="@drawable/ic_prescription_green"
+                        android:drawableLeft="@drawable/ic_prescription_green"
+                        android:drawablePadding="20sp"
+                        android:fontFamily="@font/lato_bold"
+                        android:gravity="start|center"
+                        android:text="Download Prescription"
+                        android:textColor="@color/txt_sub_header_color"
+                        android:textSize="@dimen/text_20sp" />
+
+                    <!-- Icon Credits:- <a target="_blank" href="https://icons8.com/icons/set/whatsapp">WhatsApp icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>-->
+
+                </RelativeLayout>
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_marginEnd="8dp"
+                    android:visibility="gone"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/ic_heart">
+
+                </ImageView>
+
+            </FrameLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
         <androidx.cardview.widget.CardView
             android:id="@+id/help_cardview"
             android:layout_width="match_parent"
